--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             <h3>
                 <div>몽땅식탁과 함께 구해낸</div>
                 <div>오늘의 식재료🍊</div>
-                <span class="color-point">12,345</span>개
+                <span id="todayCount" class="color-point">12,345</span>개
             </h3>
             <br /><br />
             <h3>
                 <div>누적 거래 수</div>
-                <span class="color-point">12,345</span>건
+                <span id="totalCount" class="color-point">12,345</span>건
             </h3>
         </div>
         <div class="sns">
@@ -132,5 +132,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
