--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <header>
             <div class="container">
                 <h1>우리 동네 식자재 교환 커뮤니티</h1>
-                <img src="img/logo.png" />
+                <img src="img/logo.svg" />
             </div>
         </header>
-        <img src="img/exchange.png" alt="" srcset="">
+        <div class="exchange">
+            <img src="img/exchange.png" alt="" srcset="">
+        </div>
         <div class="text">
             <div class="container">
                 <h2>
@@ -38,12 +40,11 @@
         <div class="status">
             <h3>
                 <div>몽땅식탁과 함께 구해낸</div>
-                <div>오늘의 식재료🍊</div>
+                <div class="mb-4">오늘의 식재료🍊</div>
                 <span id="todayCount" class="color-point">12,345</span>개
             </h3>
-            <br /><br />
             <h3>
-                <div>누적 거래 수</div>
+                <div class="mb-4">누적 거래 수</div>
                 <span id="totalCount" class="color-point">12,345</span>건
             </h3>
         </div>
@@ -53,36 +54,44 @@
                 <div>거래를 원하는 이웃을</div>
                 <div>찾아보세요👀</div>
             </h4>
-            <button class="btn btn-point">이용방법</button>
+            <button class="btn btn-point default">이용방법</button>
             <div class="part">
-                <button class="btn btn-point number">1</button>
+                <button class="btn btn-point number default">1</button>
                 <div class="desc">
-                    <div>몽땅식탁 페이스북 페이지에 거래하고 싶은</div>
-                    <div>식자재 사진과 함께 게시글을 작성합니다.</div>
-                    <div>*입력 항목 : 종류, 수량, 구매일, 원산지, 지역(동네), 거래 희망 식자재</div>
-                    <p><br /></p>
-                    <div>또는, 교환하고 싶은 식자재가 포함된</div>
-                    <div>게시물을 발견했다면 댓글을 달아주세요.</div>
+                    <div class="wrapper">
+                        <div>몽땅식탁 페이스북 페이지에 거래하고 싶은</div>
+                        <div>식자재 사진과 함께 게시글을 작성합니다.</div>
+                        <div>*입력 항목 : 종류, 수량, 구매일, 원산지, 지역(동네), 거래 희망 식자재</div>
+                        <p><br /></p>
+                        <div>또는, 교환하고 싶은 식자재가 포함된</div>
+                        <div>게시물을 발견했다면 댓글을 달아주세요.</div>
+                    </div>
                     <img src="img/apple.png" alt="" srcset="">
                 </div>
             </div>
             <div class="part">
-                <button class="btn btn-point number">2</button>
+                <button class="btn btn-point number default">2</button>
                 <div class="desc">
-                    <div>게시물에 댓글이 달리면 이웃과 페이스북 메시지를 통해</div>
-                    <div>거래 일시와 장소를 정해요.</div>
+                    <div class="wrapper">
+                        <div>게시물에 댓글이 달리면 이웃과 페이스북 메시지를 통해</div>
+                        <div>거래 일시와 장소를 정해요.</div>
+                    </div>
                     <img src="img/onion.png" alt="" srcset="">
                 </div>
             </div>
             <div class="part">
-                <button class="btn btn-point number">3</button>
-                <div class="desc">약속한 날짜에 각자의 식자재를 교환해요!</div>
+                <button class="btn btn-point number default">3</button>
+                <div class="wrapper">
+                    <div class="desc">약속한 날짜에 각자의 식자재를 교환해요!</div>
+                </div>
             </div>
             <div class="part">
-                <button class="btn btn-point number">4</button>
+                <button class="btn btn-point number default">4</button>
                 <div class="desc">
-                    <div>해당 게시물에 댓글로 ‘거래 완료’를 알리고 선물 받기 🎁</div>
-                    <div>(최초 거래 인증 30명 대상)</div>
+                    <div class="wrapper">
+                        <div>해당 게시물에 댓글로 ‘거래 완료’를 알리고 선물 받기 🎁</div>
+                        <div>(최초 거래 인증 30명 대상)</div>
+                    </div>
                 </div>
             </div>
             <div class="part last color-ea9800">
@@ -123,10 +132,10 @@
             <div>몽땅식탁</div>
             <div>mongddang_table</div>
             <div class="links">
-                <a>
+                <a href="https://www.facebook.com/groups/mongddang" target="_blank">
                     <img src="img/facebook.png" />
                 </a>
-                <a>
+                <a href="https://www.instagram.com/mongddang_table/" target="_blank">
                     <img src="img/instagram.png" />
                 </a>
             </div>
