--- a/index.html
+++ b/index.html
@@ -73,16 +73,15 @@
                 <button class="btn btn-point number default">2</button>
                 <div class="desc">
                     <div class="wrapper">
-                        <div>게시물에 댓글이 달리면 이웃과 페이스북 메시지를 통해</div>
-                        <div>거래 일시와 장소를 정해요.</div>
+                        <div>게시물에 댓글이 달리면 이웃과 페이스북 메시지를 통해 <br class="d-none d-md-block" />거래 일시와 장소를 정해요.</div>
                     </div>
                     <img src="img/onion.png" alt="" srcset="">
                 </div>
             </div>
             <div class="part">
                 <button class="btn btn-point number default">3</button>
-                <div class="wrapper">
-                    <div class="desc">약속한 날짜에 각자의 식자재를 교환해요!</div>
+                <div class="desc">
+                    <div class="wrapper">약속한 날짜에 각자의 식자재를 교환해요!</div>
                 </div>
             </div>
             <div class="part">
@@ -95,8 +94,13 @@
                 </div>
             </div>
             <div class="part last color-ea9800">
-                <div>오늘도 냉장고에서 잠자고 있는 우리 집 식재료,</div>
-                <div>시들기 전 이웃과 교환해보세요!</div>
+                <div class="desc">
+                    <div class="wrapper">
+                        오늘도 냉장고에서 잠자고 있는 우리 집 식재료,
+                        <br class="d-none d-sm-block" />
+                        시들기 전 이웃과 교환해보세요!
+                    </div>
+                </div>
             </div>
             <a class="btn btn-point rect">이웃 찾기</a>
         </div>
@@ -123,10 +127,13 @@
             </div>
         </div>
         <div class="intro">
-            <div>몽땅식탁은 가정에서 다 먹지 못하고 버려지는</div>
-            <div>식자재 낭비 문제를 해결하기 위한 커뮤니티입니다.</div>
-            <div>일상에서 실천할 수 있는 자원 선순환과</div>
-            <div>제로 웨이스트를 지향합니다.</div>
+            몽땅식탁은 가정에서 다 먹지 못하고 버려지는
+            <br class="d-none d-sm-block" />
+            식자재 낭비 문제를 해결하기 위한 커뮤니티입니다.
+            <br class="d-none d-sm-block" />
+            일상에서 실천할 수 있는 자원 선순환과
+            <br class="d-none d-sm-block" />
+            제로 웨이스트를 지향합니다.
         </div>
         <footer>
             <div>몽땅식탁</div>
