--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <h2>
                     <div>이웃과 함께하는</div>
-                    <div>음식물 제로 웨이스트👌🏻!</div>
+                    <div>음식물 제로 웨이스트 👌🏻!</div>
                 </h2>
                 <p>건강한 식생활을 위해 구매한 채소와 과일.</p>
                 <p>혼자 먹기에는 너무 많아 오래 방치하다 </p>
@@ -40,7 +40,7 @@
         <div class="status">
             <h3>
                 <div>몽땅식탁과 함께 구해낸</div>
-                <div class="mb-4">오늘의 식재료🍊</div>
+                <div class="mb-4">오늘의 식재료 🍊</div>
                 <span id="todayCount" class="color-point">12,345</span>개
             </h3>
             <h3>
@@ -52,10 +52,10 @@
             <h4>
                 <div>몽땅식탁 페이스북에서</div>
                 <div>거래를 원하는 이웃을</div>
-                <div>찾아보세요👀</div>
+                <div>찾아보세요 👀</div>
             </h4>
             <button class="btn btn-point default">이용방법</button>
-            <div class="part">
+            <div class="part apple">
                 <button class="btn btn-point number default">1</button>
                 <div class="desc">
                     <div class="wrapper">
@@ -66,16 +66,26 @@
                         <div>또는, 교환하고 싶은 식자재가 포함된</div>
                         <div>게시물을 발견했다면 댓글을 달아주세요.</div>
                     </div>
-                    <img src="img/apple.png" alt="" srcset="">
+                    <div class="arrow">
+                        <img src="img/arrow1.svg" />
+                    </div>
+                    <div class="img">
+                        <img src="img/apple.png" alt="" srcset="">
+                    </div>
                 </div>
             </div>
-            <div class="part">
+            <div class="part onion">
                 <button class="btn btn-point number default">2</button>
                 <div class="desc">
                     <div class="wrapper">
                         <div>게시물에 댓글이 달리면 이웃과 페이스북 메시지를 통해 <br class="d-none d-md-block" />거래 일시와 장소를 정해요.</div>
                     </div>
-                    <img src="img/onion.png" alt="" srcset="">
+                    <div class="arrow">
+                        <img src="img/arrow2.svg" />
+                    </div>
+                    <div class="img">
+                        <img src="img/onion.png" alt="" srcset="">
+                    </div>
                 </div>
             </div>
             <div class="part">
@@ -102,20 +112,21 @@
                     </div>
                 </div>
             </div>
-            <a class="btn btn-point rect">이웃 찾기</a>
+            <a class="btn btn-point rect" href="https://www.facebook.com/groups/mongddang" target="_blank">이웃 찾기</a>
         </div>
         <div class="community">
             <div class="part">
                 <h5>
                     <div>커뮤니티 소식은</div>
-                    <div>인스타그램에서!😊</div>
+                    <div>인스타그램에서! 😊</div>
                 </h5>
-                <a class="btn btn-point rect">소식 확인</a>
+                <a class="btn btn-point rect" href="https://www.instagram.com/mongddang_table/" target="_blank">소식
+                    확인</a>
             </div>
             <div class="part">
                 <h5>
                     <div>이런 분들,</div>
-                    <div>몽땅식탁에 초대해요!💌</div>
+                    <div>몽땅식탁에 초대해요! 💌</div>
                 </h5>
                 <ul>
                     <li>다 먹지 못하고 버려지는 식재료가 아까우신 분들</li>
