--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="우리 동네 식자재 교환 커뮤니티">
+    <meta name="keywords" content="몽땅식탁, 식자재">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
+    <meta property="og:description" content="우리 동네 식자재 교환 커뮤니티">
+    <meta property="og:image" content="/img/logo.png">
+    <meta property="og:url" content="https://africalib.github.io/mongddang/">
+    <meta property="twitter:url" content="https://africalib.github.io/mongddang/">
+    <meta property="twitter:image" content="/img/logo.png">
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
+    <meta property="twitter:description" content="우리 동네 식자재 교환 커뮤니티">
     <title>몽땅식탁 - 우리 동네 식자재 교환 커뮤니티</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css"
-        integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,11 +26,11 @@
         <header>
             <div class="container">
                 <h1>우리 동네 식자재 교환 커뮤니티</h1>
-                <img src="img/logo.svg" />
+                <img src="img/logo.svg" alt="대표 로고" />
             </div>
         </header>
         <div class="exchange">
-            <img src="img/exchange.png" alt="" srcset="">
+            <img src="img/exchange.png" alt="식자재 거래 일러스트" />
         </div>
         <div class="text">
             <div class="container">
@@ -66,11 +77,11 @@
                         <div>또는, 교환하고 싶은 식자재가 포함된</div>
                         <div>게시물을 발견했다면 댓글을 달아주세요.</div>
                     </div>
-                    <div class="arrow">
-                        <img src="img/arrow1.svg" />
+                    <div class="arrow d-none d-md-block">
+                        <img src="img/arrow1.svg" alt="화살표" />
                     </div>
                     <div class="img">
-                        <img src="img/apple.png" alt="" srcset="">
+                        <img src="img/apple.png" alt="사과 거래" />
                     </div>
                 </div>
             </div>
@@ -80,11 +91,11 @@
                     <div class="wrapper">
                         <div>게시물에 댓글이 달리면 이웃과 페이스북 메시지를 통해 <br class="d-none d-md-block" />거래 일시와 장소를 정해요.</div>
                     </div>
-                    <div class="arrow">
-                        <img src="img/arrow2.svg" />
+                    <div class="arrow d-none d-md-block">
+                        <img src="img/arrow2.svg" alt="화살표" />
                     </div>
                     <div class="img">
-                        <img src="img/onion.png" alt="" srcset="">
+                        <img src="img/onion.png" alt="양파 거래" />
                     </div>
                 </div>
             </div>
@@ -112,7 +123,8 @@
                     </div>
                 </div>
             </div>
-            <a class="btn btn-point rect" href="https://www.facebook.com/groups/mongddang" target="_blank">이웃 찾기</a>
+            <a class="btn btn-point rect" href="https://www.facebook.com/groups/mongddang" rel="noopener"
+                target="_blank">이웃 찾기</a>
         </div>
         <div class="community">
             <div class="part">
@@ -120,7 +132,8 @@
                     <div>커뮤니티 소식은</div>
                     <div>인스타그램에서! 😊</div>
                 </h5>
-                <a class="btn btn-point rect" href="https://www.instagram.com/mongddang_table/" target="_blank">소식
+                <a class="btn btn-point rect" href="https://www.instagram.com/mongddang_table/" rel="noopener"
+                    target="_blank">소식
                     확인</a>
             </div>
             <div class="part">
@@ -150,16 +163,16 @@
             <div>몽땅식탁</div>
             <div>mongddang_table</div>
             <div class="links">
-                <a href="https://www.facebook.com/groups/mongddang" target="_blank">
-                    <img src="img/facebook.png" />
+                <a href="https://www.facebook.com/groups/mongddang" target="_blank" rel="noopener">
+                    <img src="img/facebook.png" alt="페이스북" />
                 </a>
-                <a href="https://www.instagram.com/mongddang_table/" target="_blank">
-                    <img src="img/instagram.png" />
+                <a href="https://www.instagram.com/mongddang_table/" target="_blank" rel="noopener">
+                    <img src="img/instagram.png" alt="인스타그램" />
                 </a>
             </div>
         </footer>
     </div>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
