--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>몽땅식탁 - 우리 동네 식자재 교환 커뮤니티</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="우리 동네 식자재 교환 커뮤니티">
@@ -9,14 +10,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
     <meta property="og:description" content="우리 동네 식자재 교환 커뮤니티">
-    <meta property="og:image" content="/img/logo.png">
-    <meta property="og:url" content="https://africalib.github.io/mongddang/">
-    <meta property="twitter:url" content="https://africalib.github.io/mongddang/">
-    <meta property="twitter:image" content="/img/logo.png">
+    <meta property="og:image" content="img/exchange.png">
+    <meta property="og:url" content="http://mongddang.co.kr/mongddang/">
+    <meta property="twitter:url" content="http://mongddang.co.kr/mongddang/">
+    <meta property="twitter:image" content="img/exchange.png">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
     <meta property="twitter:description" content="우리 동네 식자재 교환 커뮤니티">
-    <title>몽땅식탁 - 우리 동네 식자재 교환 커뮤니티</title>
+    <link href="img/favicon.ico" rel="icon">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
@@ -114,7 +115,7 @@
                     </div>
                 </div>
             </div>
-            <div class="part last color-ea9800">
+            <div class="part last color-f19d00">
                 <div class="desc">
                     <div class="wrapper">
                         오늘도 냉장고에서 잠자고 있는 우리 집 식재료,
