--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <title>몽땅식탁 - 우리 동네 식자재 교환 커뮤니티</title>
     <meta charset="utf-8">
@@ -10,14 +10,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
     <meta property="og:description" content="우리 동네 식자재 교환 커뮤니티">
-    <meta property="og:image" content="img/exchange.png">
-    <meta property="og:url" content="http://mongddang.co.kr/mongddang/">
-    <meta property="twitter:url" content="http://mongddang.co.kr/mongddang/">
-    <meta property="twitter:image" content="img/exchange.png">
+    <meta property="og:image" content="https://mongddang.co.kr/img/exchange.png">
+    <meta property="og:url" content="https://mongddang.co.kr/">
+    <meta property="twitter:url" content="https://mongddang.co.kr/">
+    <meta property="twitter:image" content="https://mongddang.co.kr/img/exchange.png">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
     <meta property="twitter:description" content="우리 동네 식자재 교환 커뮤니티">
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
