--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
     <meta property="og:description" content="우리 동네 식자재 교환 커뮤니티">
-    <meta property="og:image" content="https://mongddang.co.kr/img/exchange.png">
+    <meta property="og:image" content="https://mongddang.co.kr/img/summary.png">
     <meta property="og:url" content="https://mongddang.co.kr/">
     <meta property="twitter:url" content="https://mongddang.co.kr/">
-    <meta property="twitter:image" content="https://mongddang.co.kr/img/exchange.png">
+    <meta property="twitter:image" content="https://mongddang.co.kr/img/summary.png">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
     <meta property="twitter:description" content="우리 동네 식자재 교환 커뮤니티">
@@ -31,7 +31,7 @@
             </div>
         </header>
         <div class="exchange">
-            <img src="img/exchange.png" alt="식자재 거래 일러스트" />
+            <img src="img/exchange.svg" alt="식자재 거래 일러스트" />
         </div>
         <div class="text">
             <div class="container">
@@ -165,10 +165,10 @@
             <div>mongddang_table</div>
             <div class="links">
                 <a href="https://www.facebook.com/groups/mongddang" target="_blank" rel="noopener">
-                    <img src="img/facebook.png" alt="페이스북" />
+                    <img src="img/facebook.svg" alt="페이스북" />
                 </a>
                 <a href="https://www.instagram.com/mongddang_table/" target="_blank" rel="noopener">
-                    <img src="img/instagram.png" alt="인스타그램" />
+                    <img src="img/instagram.svg" alt="인스타그램" />
                 </a>
             </div>
         </footer>
