--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <title>몽땅식탁 - 우리 동네 식자재 교환 커뮤니티</title>
+    <title>몽땅식탁 - 우리 동네 식자재 교환 커뮤니티</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="우리 동네 식자재 교환 커뮤니티">
     <meta name="keywords" content="몽땅식탁, 식자재">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
+    <meta property="og:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
     <meta property="og:description" content="우리 동네 식자재 교환 커뮤니티">
     <meta property="og:image" content="https://mongddang.co.kr/img/summary.png">
     <meta property="og:url" content="https://mongddang.co.kr/">
     <meta property="twitter:url" content="https://mongddang.co.kr/">
     <meta property="twitter:image" content="https://mongddang.co.kr/img/summary.png">
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
+    <meta property="twitter:title" content="몽땅식탁 - 우리 동네 식자재 교환 커뮤니티">
     <meta property="twitter:description" content="우리 동네 식자재 교환 커뮤니티">
     <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet"
